WIP - Added resolving for cms page and result abstraction
